# argos3-examples

controllers/footbot_gripping/: CMakeLists.txt  footbot_gripping.cpp
experiments/: gripping.argos
loop_functions/: CMakeLists.txt
loop_functions/gripping_loop_functions/: CMakeLists.txt  gripping_loop_functions.cpp  gripping_loop_functions.h  gripping_qt_user_functions.cpp  gripping_qt_user_functions.h
